--- a/404.md
+++ b/404.md
@@ -5,7 +5,7 @@ permalink: /404.html
 
 # 404
 
-Sorry, we can't seem to find this page's pixylls.
+What you're looking for doesn't exist. Congratulations, you've managed to break the internet.
 
 <div class="mt3">
   <a href="{{ site.baseurl }}/" class="button button-blue button-big">Home</a>
